fixed paths for javascript

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <button type="button" id="btn-unformat">Unformat</button>
     </div>
   </body>
-  <script type="text/javascript" src="/scheme_parser.js"></script>
-  <script type="text/javascript" src="/environment.js"></script>
-  <script type="text/javascript" src="/scheme_runtime.js"></script>
+  <script type="text/javascript" src="scheme_parser.js"></script>
+  <script type="text/javascript" src="environment.js"></script>
+  <script type="text/javascript" src="scheme_runtime.js"></script>
   <script type="text/javascript" src="test_cases.js"></script>
-  <script type="text/javascript" src="/ide.js"></script>
+  <script type="text/javascript" src="ide.js"></script>
 </html>
