added additional functionality and some example snippets for those functions

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   <body>
     <div>
       <div>
+      <span>Code examples</span>
+      <select id="select-test-cases">
+      </select>
+      </div>
+      <div>
         <textarea rows="40" cols="50" id="ta-program">
-          (begin (define r 10) (define pi 3.1415) (* pi (* r r)))
+        (begin (define r 10) (define pi 3.1415) (* pi (* r r)))
         </textarea>
       </div>
       <div>
