--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   <script type="text/javascript" src="scheme_parser.js"></script>
   <script type="text/javascript" src="environment.js"></script>
   <script type="text/javascript" src="scheme_runtime.js"></script>
+  <script type="text/javascript" src="scheme_runtime_functions.js"></script>
   <script type="text/javascript" src="test_cases.js"></script>
   <script type="text/javascript" src="ide.js"></script>
+
 </html>
