--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>title</title>
+    <title>LispyJS</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
