Added some tail call optimization, but there is still issues

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <script type="text/javascript" src="scheme_runtime.js"></script>
   <script type="text/javascript" src="scheme_runtime_functions.js"></script>
   <script type="text/javascript" src="test_cases.js"></script>
+  <script type="text/javascript" src="debug_utils.js"></script>
   <script type="text/javascript" src="ide.js"></script>
 
 </html>
