added support for loading sources

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <script type="text/javascript" src="src/environment.js"></script>
   <script type="text/javascript" src="src/scheme_runtime.js"></script>
   <script type="text/javascript" src="src/scheme_runtime_functions.js"></script>
-  <script type="text/javascript" src="src/test_cases.js"></script>
+  <script type="text/javascript" src="tst/test_cases.js"></script>
   <script type="text/javascript" src="src/debug_utils.js"></script>
   <script type="text/javascript" src="ide.js"></script>
 
